# 42seoul_subject

./: .gitignore
ft_printf/: Makefile  ft_print_hex.c  ft_print_unsigned.c  ft_printf.c  ft_printf.h  ft_printf_libft.c  ft_printf_utils.c
get_next_line/: CMakeLists.txt  Makefile  a.out  get_next_line  get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_string.c  get_next_line_test.c  get_next_line_util.c  get_next_line_utils.c  get_next_line_utils_bonus.c  test.txt  test_main.c  testfile
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isdigit.c  ft_itoa.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstdelone_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c  ft_memchr.c  ft_memcmp.c  ft_memset.c  ft_putchar_fd.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strlcat.c  ft_strlcpy.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_substr.c  ft_tolower.c  ft_toupper.c  test  test.c
minitalk/: Makefile  client  client.c  client.h  server  (+2 more)
philosophers/: CMakeLists.txt
philosophers/libft/: ft_atoi.c  ft_isalpha.c  ft_isascii.c  ft_isprint.c  ft_itoa.c  ft_lstclear_bonus.c  ft_lstiter_bonus.c  ft_lstlast_bonus.c  ft_lstmap_bonus.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_strcat.c  ft_strdup.c  ft_strjoin.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strrchr.c  ft_strtrim.c  ft_tolower.c  libft.h
philosophers/srcs/: Makefile  check_philos.c  ft_atoi.c  ft_putstr_fd.c  ft_strlen.c  initialize.c  main.c  philo  philo.h  philo_action.c  philo_utils.c
(+70 files in other folders)
